added close button styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button class="open-modal" type="button">Open Modal</button>
             <dialog class="modal">
                 <div class="modal-container">
-                    <h1 class="header-footer">Modal Header</h1>
+                    <h1 class="header-footer">Modal Header <span><button class="close-button">&times;</button></span></h1>
                     <p class="text">Hello World!</p>
                     <p class="text">Modals are awesome!</p>
                     <p class="header-footer">Modal Footer</p>
